--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "ganiee.log"
+title                    : "ganni.log"
 title_separator          : "|"
 subtitle                 : "Don't dream, Be it."
 name                     : "Lee Gaeun"
-description              : "ganiee의 블로그입니다."
-url                      : "https://ganieedev.github.io"
+description              : "GaEun의 블로그입니다."
+url                      : "https://gaeunleedev.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -32,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : "ganieedev"
+    shortname            : "gaeunleedev"
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -112,10 +112,10 @@ author:
       url: "mailto:igaeun0112@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://ganieedev.github.io"
+      url: "https://gaeunleedev.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ganieedev"
+      url: "https://github.com/gaeunleedev"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/ga_ezzn"
@@ -125,7 +125,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ganieedev"
+      url: "https://github.com/gaeunleedev"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/ga_ezzn"
