네이버 검색 엔진 등록

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "49b42e4dabe681ff336f69989e695e0b4e5e51eb"
 yandex_site_verification :
 baidu_site_verification  :
 
